--- a/src/EventDetectionWebServer/templates/index.html
+++ b/src/EventDetectionWebServer/templates/index.html
@@ -33,7 +33,7 @@
         <br>
 
         <div id="url_input">
-            <input type="text" name="url" id="url" value="https://www.youtube.com/watch?v=MStKYMF0ISY"><button type="button" onclick="updateURL()">Update URL</button>
+            <input type="text" name="url" id="url" value="https://www.youtube.com/watch?v=yHvFL92RXP4"><button type="button" onclick="updateURL()">Update URL</button>
         </div>
         <br>
 
@@ -44,7 +44,7 @@
             controls preload="auto"
             width="640"
             height="360"
-            data-setup='{ "techOrder": ["youtube"], "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=MStKYMF0ISY"}] }'
+            data-setup='{ "techOrder": ["youtube"], "sources": [{ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=yHvFL92RXP4"}] }'
             >
         </video>
 
