--- a/src/EventDetectionWebServer/templates/index.html
+++ b/src/EventDetectionWebServer/templates/index.html
@@ -59,7 +59,9 @@
         <!-- EMAIL INPUT -->
         <br><br>
         <div id="email_input">
-            <input type="text" name="email" id="email" value="first.last@mail.mcgill.ca"><button type="button" onclick="submit()">Email Results</button>
+            <input type="text" name="email" id="email" value="first.last@mail.mcgill.ca">
+            <button type="button" onclick="submit(requestType.motion_tracking)">Send Tracking Request</button>
+            <button type="button" onclick="submit(requestType.object_recognition)">Send Object Recognition Request</button>
         </div>
 
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
